--- a/light.css
+++ b/light.css
@@ -12,8 +12,8 @@
 
     /* Text */
     --text: #1a1a1a;
-    --text-secondary: #6b6b6b;
-    --text-disabled: #aaaaaa;
+    --text-secondary: #4d4d4d;
+    --text-disabled: #888888;
 
     /* Borders */
     --border: #c8c8c8;
