--- a/notification.css
+++ b/notification.css
@@ -14,7 +14,7 @@
 }
 
 .shorttemplates_ShortTemplate_29NLb .shorttemplates_Body_i5dFV {
-    color: var(--text-secondary);
+    color: var(--text);
 }
 
 .notificationcontent_FriendInGameAppColor_3uw_G {
